--- a/src/vmachine.css
+++ b/src/vmachine.css
@@ -31,7 +31,7 @@ body{
     font-size:13px;
     width:100%;
     min-width:770px;
-    background:#B2CCE5;
+    background-color:#fff;
 }
 h2,
 h3,
@@ -66,6 +66,7 @@ div#mainBanner{
 	top:0;
 	left:0;
 	z-index:10;
+	background-color:#B2CCE5;
 	background-image: url("../vm-images/HeaderBackground.svg");
 	background-size: cover;
 	background-repeat:no-repeat;
